<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/alarm_detail_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/alarm_detail_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/route"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/alarm_detail_route_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/alarm_detail_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hour"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/alarm_detail_hour_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/alarm_detail_minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minute"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/alarm_detail_minute_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/alarm_detail_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/month"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/alarm_detail_month_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/alarm_detail_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/day"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/alarm_detail_day_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/alarm_detail_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/year"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/alarm_detail_year_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDelete"
        android:text="@string/delete_alarm" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="homeClick"
        android:text="@string/home" />

</LinearLayout>