<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_route_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/record_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Button" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/route_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/start_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/start_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/end_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/end_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/newRouteTimerDisplay"
        style="@style/styleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Not Started" />

</LinearLayout>